GoParser.py
# Generated from GoParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

if "." in __name__:
    from .GoParserBase import GoParserBase
else:
    from GoParserBase import GoParserBase


class GoParser ( GoParserBase ):

    grammarFileName = "GoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'default'", "'func'", "'interface'", 
                     "'select'", "'case'", "'defer'", "'go'", "'map'", "'struct'", 
                     "'chan'", "'else'", "'goto'", "'package'", "'switch'", 
                     "'const'", "'fallthrough'", "'if'", "'range'", "'type'", 
                     "'continue'", "'for'", "'import'", "'return'", "'var'", 
                     "'nil'", "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'='", "','", "';'", "':'", "'.'", "'++'", "'--'", 
                     "':='", "'...'", "'||'", "'&&'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'|'", "'/'", "'%'", "'<<'", 
                     "'>>'", "'&^'", "'~'", "'!'", "'+'", "'-'", "'^'", 
                     "'*'", "'&'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "DEFAULT", "FUNC", "INTERFACE", 
                      "SELECT", "CASE", "DEFER", "GO", "MAP", "STRUCT", 
                      "CHAN", "ELSE", "GOTO", "PACKAGE", "SWITCH", "CONST", 
                      "FALLTHROUGH", "IF", "RANGE", "TYPE", "CONTINUE", 
                      "FOR", "IMPORT", "RETURN", "VAR", "NIL_LIT", "IDENTIFIER", 
                      "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", 
                      "R_BRACKET", "ASSIGN", "COMMA", "SEMI", "COLON", "DOT", 
                      "PLUS_PLUS", "MINUS_MINUS", "DECLARE_ASSIGN", "ELLIPSIS", 
                      "LOGICAL_OR", "LOGICAL_AND", "EQUALS", "NOT_EQUALS", 
                      "LESS", "LESS_OR_EQUALS", "GREATER", "GREATER_OR_EQUALS", 
                      "OR", "DIV", "MOD", "LSHIFT", "RSHIFT", "BIT_CLEAR", 
                      "UNDERLYING", "EXCLAMATION", "PLUS", "MINUS", "CARET", 
                      "STAR", "AMPERSAND", "RECEIVE", "DECIMAL_LIT", "BINARY_LIT", 
                      "OCTAL_LIT", "HEX_LIT", "FLOAT_LIT", "DECIMAL_FLOAT_LIT", 
                      "HEX_FLOAT_LIT", "IMAGINARY_LIT", "RUNE_LIT", "BYTE_VALUE", 
                      "OCTAL_BYTE_VALUE", "HEX_BYTE_VALUE", "LITTLE_U_VALUE", 
                      "BIG_U_VALUE", "RAW_STRING_LIT", "INTERPRETED_STRING_LIT", 
                      "WS", "COMMENT", "TERMINATOR", "LINE_COMMENT", "WS_NLSEMI", 
                      "COMMENT_NLSEMI", "LINE_COMMENT_NLSEMI", "EOS", "OTHER" ]

    RULE_sourceFile = 0
    RULE_packageClause = 1
    RULE_importDecl = 2
    RULE_importSpec = 3
    RULE_importPath = 4
    RULE_declaration = 5
    RULE_constDecl = 6
    RULE_constSpec = 7
    RULE_identifierList = 8
    RULE_expressionList = 9
    RULE_typeDecl = 10
    RULE_typeSpec = 11
    RULE_aliasDecl = 12
    RULE_typeDef = 13
    RULE_typeParameters = 14
    RULE_typeParameterDecl = 15
    RULE_typeElement = 16
    RULE_typeTerm = 17
    RULE_functionDecl = 18
    RULE_methodDecl = 19
    RULE_receiver = 20
    RULE_varDecl = 21
    RULE_varSpec = 22
    RULE_block = 23
    RULE_statementList = 24
    RULE_statement = 25
    RULE_simpleStmt = 26
    RULE_expressionStmt = 27
    RULE_sendStmt = 28
    RULE_incDecStmt = 29
    RULE_assignment = 30
    RULE_assign_op = 31
    RULE_shortVarDecl = 32
    RULE_labeledStmt = 33
    RULE_returnStmt = 34
    RULE_breakStmt = 35
    RULE_continueStmt = 36
    RULE_gotoStmt = 37
    RULE_fallthroughStmt = 38
    RULE_deferStmt = 39
    RULE_ifStmt = 40
    RULE_switchStmt = 41
    RULE_exprSwitchStmt = 42
    RULE_exprCaseClause = 43
    RULE_exprSwitchCase = 44
    RULE_typeSwitchStmt = 45
    RULE_typeSwitchGuard = 46
    RULE_typeCaseClause = 47
    RULE_typeSwitchCase = 48
    RULE_typeList = 49
    RULE_selectStmt = 50
    RULE_commClause = 51
    RULE_commCase = 52
    RULE_recvStmt = 53
    RULE_forStmt = 54
    RULE_forClause = 55
    RULE_rangeClause = 56
    RULE_goStmt = 57
    RULE_type_ = 58
    RULE_typeArgs = 59
    RULE_typeName = 60
    RULE_typeLit = 61
    RULE_arrayType = 62
    RULE_arrayLength = 63
    RULE_elementType = 64
    RULE_pointerType = 65
    RULE_interfaceType = 66
    RULE_sliceType = 67
    RULE_mapType = 68
    RULE_channelType = 69
    RULE_methodSpec = 70
    RULE_functionType = 71
    RULE_signature = 72
    RULE_result = 73
    RULE_parameters = 74
    RULE_parameterDecl = 75
    RULE_expression = 76
    RULE_primaryExpr = 77
    RULE_conversion = 78
    RULE_operand = 79
    RULE_literal = 80
    RULE_basicLit = 81
    RULE_integer = 82
    RULE_operandName = 83
    RULE_qualifiedIdent = 84
    RULE_compositeLit = 85
    RULE_literalType = 86
    RULE_literalValue = 87
    RULE_elementList = 88
    RULE_keyedElement = 89
    RULE_key = 90
    RULE_element = 91
    RULE_structType = 92
    RULE_fieldDecl = 93
    RULE_string_ = 94
    RULE_embeddedField = 95
    RULE_functionLit = 96
    RULE_index = 97
    RULE_slice_ = 98
    RULE_typeAssertion = 99
    RULE_arguments = 100
    RULE_methodExpr = 101
    RULE_eos = 102

    ruleNames =  [ "sourceFile", "packageClause", "importDecl", "importSpec", 
                   "importPath", "declaration", "constDecl", "constSpec", 
                   "identifierList", "expressionList", "typeDecl", "typeSpec", 
                   "aliasDecl", "typeDef", "typeParameters", "typeParameterDecl", 
                   "typeElement", "typeTerm", "functionDecl", "methodDecl", 
                   "receiver", "varDecl", "varSpec", "block", "statementList", 
                   "statement", "simpleStmt", "expressionStmt", "sendStmt", 
                   "incDecStmt", "assignment", "assign_op", "shortVarDecl", 
                   "labeledStmt", "returnStmt", "breakStmt", "continueStmt", 
                   "gotoStmt", "fallthroughStmt", "deferStmt", "ifStmt", 
                   "switchStmt", "exprSwitchStmt", "exprCaseClause", "exprSwitchCase", 
                   "typeSwitchStmt", "typeSwitchGuard", "typeCaseClause", 
                   "typeSwitchCase", "typeList", "selectStmt", "commClause", 
                   "commCase", "recvStmt", "forStmt", "forClause", "rangeClause", 
                   "goStmt", "type_", "typeArgs", "typeName", "typeLit", 
                   "arrayType", "arrayLength", "elementType", "pointerType", 
                   "interfaceType", "sliceType", "mapType", "channelType", 
                   "methodSpec", "functionType", "signature", "result", 
                   "parameters", "parameterDecl", "expression", "primaryExpr", 
                   "conversion", "operand", "literal", "basicLit", "integer", 
                   "operandName", "qualifiedIdent", "compositeLit", "literalType", 
                   "literalValue", "elementList", "keyedElement", "key", 
                   "element", "structType", "fieldDecl", "string_", "embeddedField", 
                   "functionLit", "index", "slice_", "typeAssertion", "arguments", 
                   "methodExpr", "eos" ]

    EOF = Token.EOF
    BREAK=1
    DEFAULT=2
    FUNC=3
    INTERFACE=4
    SELECT=5
    CASE=6
    DEFER=7
    GO=8
    MAP=9
    STRUCT=10
    CHAN=11
    ELSE=12
    GOTO=13
    PACKAGE=14
    SWITCH=15
    CONST=16
    FALLTHROUGH=17
    IF=18
    RANGE=19
    TYPE=20
    CONTINUE=21
    FOR=22
    IMPORT=23
    RETURN=24
    VAR=25
    NIL_LIT=26
    IDENTIFIER=27
    L_PAREN=28
    R_PAREN=29
    L_CURLY=30
    R_CURLY=31
    L_BRACKET=32
    R_BRACKET=33
    ASSIGN=34
    COMMA=35
    SEMI=36
    COLON=37
    DOT=38
    PLUS_PLUS=39
    MINUS_MINUS=40
    DECLARE_ASSIGN=41
    ELLIPSIS=42
    LOGICAL_OR=43
    LOGICAL_AND=44
    EQUALS=45
    NOT_EQUALS=46
    LESS=47
    LESS_OR_EQUALS=48
    GREATER=49
    GREATER_OR_EQUALS=50
    OR=51
    DIV=52
    MOD=53
    LSHIFT=54
    RSHIFT=55
    BIT_CLEAR=56
    UNDERLYING=57
    EXCLAMATION=58
    PLUS=59
    MINUS=60
    CARET=61
    STAR=62
    AMPERSAND=63
    RECEIVE=64
    DECIMAL_LIT=65
    BINARY_LIT=66
    OCTAL_LIT=67
    HEX_LIT=68
    FLOAT_LIT=69
    DECIMAL_FLOAT_LIT=70
    HEX_FLOAT_LIT=71
    IMAGINARY_LIT=72
    RUNE_LIT=73
    BYTE_VALUE=74
    OCTAL_BYTE_VALUE=75
    HEX_BYTE_VALUE=76
    LITTLE_U_VALUE=77
    BIG_U_VALUE=78
    RAW_STRING_LIT=79
    INTERPRETED_STRING_LIT=80
    WS=81
    COMMENT=82
    TERMINATOR=83
    LINE_COMMENT=84
    WS_NLSEMI=85
    COMMENT_NLSEMI=86
    LINE_COMMENT_NLSEMI=87
    EOS=88
    OTHER=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packageClause(self):
            return self.getTypedRuleContext(GoParser.PackageClauseContext,0)


        def eos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.EosContext)
            else:
                return self.getTypedRuleContext(GoParser.EosContext,i)


        def EOF(self):
            return self.getToken(GoParser.EOF, 0)

        def importDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.ImportDeclContext,i)


        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.FunctionDeclContext,i)


        def methodDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.MethodDeclContext)
            else:
                return self.getTypedRuleContext(GoParser.MethodDeclContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(GoParser.DeclarationContext,i)


        def getRuleIndex(self):
            return GoParser.RULE_sourceFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceFile" ):
                listener.enterSourceFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceFile" ):
                listener.exitSourceFile(self)




    def sourceFile(self):

        localctx = GoParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.packageClause()
            self.state = 207
            self.eos()
            self.state = 213
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 208
                self.importDecl()
                self.state = 209
                self.eos()
                self.state = 215
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 225
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34668552) != 0):
                self.state = 219
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 216
                    self.functionDecl()
                    pass

                elif la_ == 2:
                    self.state = 217
                    self.methodDecl()
                    pass

                elif la_ == 3:
                    self.state = 218
                    self.declaration()
                    pass


                self.state = 221
                self.eos()
                self.state = 227
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 228
            self.match(GoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.packageName = None # Token

        def PACKAGE(self):
            return self.getToken(GoParser.PACKAGE, 0)

        def IDENTIFIER(self):
            return self.getToken(GoParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GoParser.RULE_packageClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageClause" ):
                listener.enterPackageClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageClause" ):
                listener.exitPackageClause(self)




    def packageClause(self):

        localctx = GoParser.PackageClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 230
            self.match(GoParser.PACKAGE)
            self.state = 231
            localctx.packageName = self.match(GoParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(GoParser.IMPORT, 0)

        def importSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ImportSpecContext)
            else:
                return self.getTypedRuleContext(GoParser.ImportSpecContext,i)


        def L_PAREN(self):
            return self.getToken(GoParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(GoParser.R_PAREN, 0)

        def eos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.EosContext)
            else:
                return self.getTypedRuleContext(GoParser.EosContext,i)


        def getRuleIndex(self):
            return GoParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)




    def importDecl(self):

        localctx = GoParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 233
            self.match(GoParser.IMPORT)
            self.state = 245
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27, 38, 79, 80]:
                self.state = 234
                self.importSpec()
                pass
            elif token in [28]:
                self.state = 235
                self.match(GoParser.L_PAREN)
                self.state = 241
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 27)) & ~0x3f) == 0 and ((1 << (_la - 27)) & 13510798882113537) != 0):
                    self.state = 236
                    self.importSpec()
                    self.state = 237
                    self.eos()
                    self.state = 243
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 244
                self.match(GoParser.R_PAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.alias = None # Token

        def importPath(self):
            return self.getTypedRuleContext(GoParser.ImportPathContext,0)


        def DOT(self):
            return self.getToken(GoParser.DOT, 0)

        def IDENTIFIER(self):
            return self.getToken(GoParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return GoParser.RULE_importSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportSpec" ):
                listener.enterImportSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportSpec" ):
                listener.exitImportSpec(self)




    def importSpec(self):

        localctx = GoParser.ImportSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 248
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27 or _la==38:
                self.state = 247
                localctx.alias = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==27 or _la==38):
                    localctx.alias = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 250
            self.importPath()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_(self):
            return self.getTypedRuleContext(GoParser.String_Context,0)


        def getRuleIndex(self):
            return GoParser.RULE_importPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportPath" ):
                listener.enterImportPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportPath" ):
                listener.exitImportPath(self)

    def importPath(self):
        localctx = GoParser.ImportPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importPath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 252
            self.string_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constDecl(self):
            return self.getTypedRuleContext(GoParser.ConstDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(GoParser.TypeDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(GoParser.VarDeclContext,0)


        def getRuleIndex(self):
            return GoParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = GoParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration)
        try:
            self.state = 257
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 254
                self.constDecl()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 255
                self.typeDecl()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 256
                self.varDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(GoParser.CONST, 0)

        def constSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.ConstSpecContext)
            else:
                return self.getTypedRuleContext(GoParser.ConstSpecContext,i)


        def L_PAREN(self):
            return self.getToken(GoParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(GoParser.R_PAREN, 0)

        def eos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GoParser.EosContext)
            else:
                return self.getTypedRuleContext(GoParser.EosContext,i)


        def getRuleIndex(self):
            return GoParser.RULE_constDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDecl" ):
                listener.enterConstDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDecl" ):
                listener.exitConstDecl(self)




    def constDecl(self):
